welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: not found: value boolean
	boolean vert = Color.green
        ^SlugTracking:9: error: not found: value vert
	return vert
               ^