welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = 
{
	if(estFaceMur())
		return false
	forward()
	boolean vert = Color.green
	backward()
	return vert
}        
